JDK 25 실행 경로와 dependency graph 제출을 호환 provider로 정렬한다
JDK 25로 실행되는 core, workflow, virtual-thread example은 JDK 25 provider를 사용하고 Java 21 compatibility island의 API는 JDK 21 provider를 유지한다. GitHub-managed dependency submission의 JDK 21 충돌은 repository-owned JDK 25 workflow로 분리한다.

Constraint: #1323의 JDK 25 기본 기준과 virtualthread/jdk21의 Java 21 호환성 계약을 동시에 보존해야 한다.

Rejected: GitHub-managed JDK 21 dependency submission 유지 | JDK 25 buildSrc와 호환되지 않는다.

Confidence: high

Scope-risk: moderate

Directive: Gradle consumer의 Java variant와 runtime provider를 함께 검증하고 managed workflow 설정은 hosted CI와 별도로 확인한다.

Tested: example, core(125 tests), workflow, virtualthread API, jdk21/jdk25 provider Gradle tests; actionlint; policy tests 11개; git diff --check.

Not-tested: 새 head의 hosted CI와 GitHub-managed Automatic Dependency Submission 설정은 push 후 live 검증한다.